fix(Modal): Увеличил z-index Для гарантированного перекрытия контента

--- a/packages/ui/src/Modal/Modal.module.scss
+++ b/packages/ui/src/Modal/Modal.module.scss
@@ -1,6 +1,6 @@
 .root {
   position: fixed;
-  z-index: 1000;
+  z-index: 10001;
   bottom: 0;
   top: 0;
   left: 0;
@@ -16,7 +16,7 @@
 
 .overlay {
   position: fixed;
-  z-index: 999;
+  z-index: 10000;
   top: 0;
   right: 0;
   bottom: 0;
